--- a/7.4/rootfs/etc/php7/php-fpm.conf
+++ b/7.4/rootfs/etc/php7/php-fpm.conf
@@ -5,12 +5,14 @@ process_control_timeout = 10
 error_log = /proc/self/fd/2
 
 [www]
-user = non-root
-group = non-root
+; Unnecessary because run as non root
+; user = non-root
+; group = non-root
 listen = [::]:9000
-chdir = /app
+chdir = /var/www/app
 
-access.log = /proc/self/fd/1
+; if we send this to /proc/self/fd/1, it never appears
+access.log = /proc/self/fd/2
 
 pm = dynamic
 pm.max_children = 500
@@ -27,7 +29,7 @@ decorate_workers_output = no
 
 request_slowlog_timeout = 5s
 request_terminate_timeout = 120s
-slowlog = /var/log/$pool.log.slow
+slowlog = /proc/self/fd/2
 
 pm.status_path = /fpm_status
 ping.path = /fpm_ping
