Fix images and remove sshd

--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -16,6 +16,9 @@ ARG USER
 ARG USER_UID
 ARG USER_GID
 
+# Path for php-fpm-healthcheck script
+ENV FCGI_STATUS_PATH=/fpm_status
+
 # Create group
 RUN addgroup \
     --gid ${USER_GID} \
@@ -32,6 +35,7 @@ RUN addgroup \
     && apk add -U --no-cache \
     # Packages
     tini \
+    fcgi \
     php7 \
     php7-amqp \
     php7-dev \
@@ -71,6 +75,8 @@ ENV LD_PRELOAD="/usr/lib/preloadable_libiconv.so php"
 
 ADD rootfs /
 
+USER ${USER}
+
 ENTRYPOINT ["/sbin/tini", "--"]
 
 CMD ["/usr/sbin/php-fpm7", "-R", "--nodaemonize"]
@@ -79,21 +85,18 @@ EXPOSE 9000
 
 WORKDIR /var/www/app
 
-# Set the default user
-# USER ${USER}
-
 # *************
 # * Dev image *
 # *************
 FROM main as dev
 
-ARG SSH_USER=root
-ARG SSH_USER_PASSWORD=root
+USER root
+
+ARG USER
 ARG COMPOSER_VERSION=2.4.1
 
 RUN apk add -U --no-cache \
         php7-pear \
-        openssh \
         supervisor \
         autoconf \
         git \
@@ -102,12 +105,11 @@ RUN apk add -U --no-cache \
         make \
         zip \
         php7-xdebug \
+    # Create folder for supervisord pid-file
+    && mkdir /var/run/supervisord \
+    && chown ${USER}:${USER} /var/run/supervisord \
     # Delete APK cache.
     && rm -rf /var/cache/apk/* \
-    # Create ssh user for dev.
-    && sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config \
-    && echo "${SSH_USER}:${SSH_USER_PASSWORD}" | chpasswd \
-    && ssh-keygen -A \
     # Download composer.
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION}
 
