--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -16,6 +16,9 @@ ARG USER
 ARG USER_UID
 ARG USER_GID
 
+# Path for php-fpm-healthcheck script
+ENV FCGI_STATUS_PATH=/fpm_status
+
 # Create group
 RUN addgroup \
     --gid ${USER_GID} \
@@ -32,6 +35,7 @@ RUN addgroup \
     && apk add -U --no-cache \
     # Packages
     tini \
+    fcgi \
     php8 \
     php8-dev \
     php8-common \
@@ -77,15 +81,13 @@ WORKDIR /var/www/app
 # *************
 FROM main as dev
 
-ARG SSH_USER=root
-ARG SSH_USER_PASSWORD=root
-ARG COMPOSER_VERSION=2.4.1
-
 USER root
+
+ARG USER
+ARG COMPOSER_VERSION=2.4.1
 
 RUN apk add -U --no-cache \
         php8-pear \
-        openssh \
         supervisor \
         autoconf \
         git \
@@ -94,12 +96,11 @@ RUN apk add -U --no-cache \
         make \
         zip \
         php8-xdebug \
+    # Create folder for supervisord pid-file
+    && mkdir /var/run/supervisord \
+    && chown ${USER}:${USER} /var/run/supervisord \
     # Delete APK cache.
     && rm -rf /var/cache/apk/* \
-    # Create ssh user for dev.
-    && sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config \
-    && echo "${SSH_USER}:${SSH_USER_PASSWORD}" | chpasswd \
-    && ssh-keygen -A \
     # Download composer.
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer --version=${COMPOSER_VERSION}
 
