--- a/8.1/devfs/etc/supervisord/conf.d/supervisord.conf
+++ b/8.1/devfs/etc/supervisord/conf.d/supervisord.conf
@@ -1,13 +1,11 @@
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisord.log
-pidfile=/var/run/supervisord.pid
+logfile=/proc/self/fd/1
+logfile_maxbytes = 0
+pidfile=/var/run/supervisord/supervisord.pid
 
 loglevel=debug
-user=root
+user=non-root
 
 [program:fpm]
 command=/usr/sbin/php-fpm81 -R --nodaemonize
-
-[program:ssh]
-command=/usr/sbin/sshd -D
