--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -60,6 +60,13 @@ RUN addgroup \
     php8-dom \
     php8-fpm \
     php8-sodium \
+    php8-pdo \
+    php8-pdo_pgsql \
+    php8-pgsql \
+    php8-posix \
+    php8-redis \
+    php8-tokenizer \
+    php8-fileinfo \
     # Iconv Fix
     && apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ --allow-untrusted php8-pecl-apcu \
     && ln -s /usr/bin/php8 /usr/bin/php
@@ -87,6 +94,7 @@ ARG USER
 ARG COMPOSER_VERSION=2.4.1
 
 RUN apk add -U --no-cache \
+        shadow \
         php8-pear \
         supervisor \
         autoconf \
