Fix stout logs for fpm behind supervisord

--- a/8.1/devfs/etc/supervisord/conf.d/supervisord.conf
+++ b/8.1/devfs/etc/supervisord/conf.d/supervisord.conf
@@ -9,3 +9,7 @@ user=non-root
 
 [program:fpm]
 command=/usr/sbin/php-fpm81 -R --nodaemonize
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
