--- a/test/nginx/www.conf
+++ b/test/nginx/www.conf
@@ -1,6 +1,6 @@
 server {
     server_name demo.com;
-    root /app;
+    root /var/www/app;
 
     location / {
         try_files $uri /test.php$is_args$args;
